# simsopt

./: CMakeLists.txt  requirements.txt  run_clang_format  setup.cfg  tox.ini
examples/: demo.py
src/simsgeo/: config.py  curve.py  fouriercurve.py  magneticaxis.py  objectives.py
src/simsgeopp/: .clang-format  biot_savart.cpp  biot_savart.h  biot_savart_derivative.cpp  curve.cpp  curverzfourier.cpp  curvexyzfourier.cpp  pycurve.cpp  pysurface.cpp  python.cpp  surface.cpp  surfacerzfourier.cpp  surfacexyzfourier.cpp
src/simsopt/core/: __init__.py  dofs.py  functions.py  least_squares_problem.py  mpi_solve.py  optimizable.py  surface.py  util.py
src/simsopt/geo/: magneticfieldclasses.py
tests/geo/: test_magneticfields.py
tests/simsopt/core/: test_dofs.py  test_functions.py  test_integrated.py  test_least_squares_problem.py  test_least_squares_solve.py  test_mpi.py  test_optimizable.py  test_surface.py
