[metadata]
name = simsopt
version = 0.0.1

[options]
install_requires = 
    numpy >= v1.19.0
    monty >= v4.0.0
    mpi4py >= 3.0.3
    jax >= 0.2.4
    jaxlib >= 0.1.56
    scipy >= 1.5.4
    Deprecated >= 1.2.10
    nptyping >= 1.3.0
    pandas >= 1.1.4
package_dir = 
    =src
packages = find:

[options.packages.find]
where = src
